// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SkipLink mounts 1`] = `
<div
  class="StyledLayer-ceZzeh byFxCb"
  id="skip-links"
  tabindex="-1"
>
  <div
    class="StyledLayer__StyledOverlay-hhVyjc hewshY"
  />
  <div
    class="StyledLayer__StyledContainer-gBGbkw kWMmDe"
    id="skip-links"
  >
    <div
      class="StyledBox-bStriS dGgkam"
      direction="column"
    >
      <h2
        class="StyledHeading-NQveS eQyCKF"
      >
        Skip To
        :
      </h2>
      <div
        class="StyledBox-bStriS hvTsjU"
        direction="row"
      >
        <div
          class="StyledBox-bStriS gbqAOV"
          direction="column"
        >
          <a
            class="StyledAnchor-hcnTIZ kwSIan"
            label="Main Content"
            href="#main"
          >
            Main Content
          </a>
        </div>
        <div
          class="StyledBox-bStriS gbqAOV"
          direction="column"
        >
          <a
            class="StyledAnchor-hcnTIZ kwSIan"
            label="Footer"
            href="#footer"
          >
            Footer
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SkipLink mounts 2`] = `
"@media only screen and (max-width:699px) {
  .dGgkam {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .dGgkam {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width:699px) {
  .hvTsjU {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .hvTsjU {
    padding-bottom: 6px;
  }
}

@media only screen and (max-width:699px) {
  .gbqAOV {
    margin: 4px;
  }
}

@media only screen and (max-width:699px) {
  .gbqAOV {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .eQyCKF {
    font-size: 24px;
    line-height: 1.333;
    max-width: 576px;
    font-weight: 300;
  }
}



.byFxCb {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  position: relative;
  z-index: 10;
  overflow: auto;
  pointer-events: none;
  left: -100%;
  right: 100%;
  z-index: -1;
  position: fixed;
}

@media only screen and (max-width:699px) {
  .byFxCb {
    position: absolute;
    height: 100%;
    width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .hewshY {
    position: absolute;
  }
}

@media only screen and (max-width:699px) {
  .kWMmDe {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .kWMmDe {
    position: fixed;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
  }
}"
`;

exports[`SkipLink mounts 3`] = `
<div
  class="StyledLayer-ceZzeh jNyDRA"
  id="skip-links"
  tabindex="-1"
>
  <div
    class="StyledLayer__StyledOverlay-hhVyjc hewshY"
  />
  <div
    class="StyledLayer__StyledContainer-gBGbkw ftCLnn"
    id="skip-links"
  >
    <div
      class="StyledBox-bStriS dGgkam"
      direction="column"
    >
      <h2
        class="StyledHeading-NQveS eQyCKF"
      >
        Skip To
        :
      </h2>
      <div
        class="StyledBox-bStriS hvTsjU"
        direction="row"
      >
        <div
          class="StyledBox-bStriS gbqAOV"
          direction="column"
        >
          <a
            class="StyledAnchor-hcnTIZ gUtwfp"
            label="Main Content"
            href="#main"
          >
            Main Content
          </a>
        </div>
        <div
          class="StyledBox-bStriS gbqAOV"
          direction="column"
        >
          <a
            class="StyledAnchor-hcnTIZ kwSIan"
            label="Footer"
            href="#footer"
          >
            Footer
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SkipLink mounts 4`] = `
"@media only screen and (max-width:699px) {
  .dGgkam {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .dGgkam {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width:699px) {
  .hvTsjU {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .hvTsjU {
    padding-bottom: 6px;
  }
}

@media only screen and (max-width:699px) {
  .gbqAOV {
    margin: 4px;
  }
}

@media only screen and (max-width:699px) {
  .gbqAOV {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .eQyCKF {
    font-size: 24px;
    line-height: 1.333;
    max-width: 576px;
    font-weight: 300;
  }
}



@media only screen and (max-width:699px) {
  .byFxCb {
    position: absolute;
    height: 100%;
    width: 100%;
  }
}

.jNyDRA {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  position: relative;
  z-index: 10;
  overflow: auto;
  pointer-events: none;
}

@media only screen and (max-width:699px) {
  .jNyDRA {
    position: absolute;
    height: 100%;
    width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .jNyDRA {
    position: fixed;
    top: 0px;
    left: 0px;
    right: 0px;
    bottom: 0px;
    width: 100vw;
    height: 100vh;
  }
}

@media only screen and (min-width:700px) {
  .hewshY {
    position: absolute;
  }
}

@media only screen and (max-width:699px) {
  .kWMmDe {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .kWMmDe {
    position: fixed;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
  }
}

@media only screen and (max-width:699px) {
  .ftCLnn {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .ftCLnn {
    position: fixed;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
    top: 0;
    left: 50%;
    -webkit-transform: translate(-50%,0);
    -ms-transform: translate(-50%,0);
    transform: translate(-50%,0);
    -webkit-animation: bAkQbM 0.2s ease-in-out forwards;
    animation: bAkQbM 0.2s ease-in-out forwards;
  }
}"
`;

exports[`SkipLink mounts 5`] = `
<body
  style="overflow: scroll;"
>
  <div>
    <div
      hidden=""
    >
      <div
        class="StyledLayer-ceZzeh byFxCb"
        id="skip-links"
        tabindex="-1"
      >
        <div
          class="StyledLayer__StyledOverlay-hhVyjc hewshY"
        />
        <div
          class="StyledLayer__StyledContainer-gBGbkw kWMmDe"
          id="skip-links"
        >
          <div
            class="StyledBox-bStriS dGgkam"
            direction="column"
          >
            <h2
              class="StyledHeading-NQveS eQyCKF"
            >
              Skip To
              :
            </h2>
            <div
              class="StyledBox-bStriS hvTsjU"
              direction="row"
            >
              <div
                class="StyledBox-bStriS gbqAOV"
                direction="column"
              >
                <a
                  class="StyledAnchor-hcnTIZ kwSIan"
                  label="Main Content"
                  href="#main"
                >
                  Main Content
                </a>
              </div>
              <div
                class="StyledBox-bStriS gbqAOV"
                direction="column"
              >
                <a
                  class="StyledAnchor-hcnTIZ kwSIan"
                  label="Footer"
                  href="#footer"
                >
                  Footer
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-hidden="false"
  />
</body>
`;
